# coffeeshop-on-spinkube

./: .gitignore  AzureGlobal2024.md  LICENSE  README.md  client.aks.http  client.k8s.http  client.local.http  coffeeshop.wit  spin-operator.runtime-class.yaml  spin-operator.shim-executor.yaml
.devcontainer/: Dockerfile  devcontainer.json  on-create.sh  post-create.sh
counter-api/: Cargo.toml  build.sh  spin.toml
counter-api/src/: bindings.rs  lib.rs
counter-core/: Cargo.toml
counter-core/src/: bindings.rs  lib.rs
deploys/: ingress.yaml  product-api.yaml  spinapp-product-api.yaml
deploys/dapr/: pubsub.yaml  statestore.yaml
product-api/: Cargo.toml  build.sh  spin.toml
product-api/src/: bindings.rs  lib.rs
product-api/wit/: coffeeshop.wit
product-core/: Cargo.toml
product-core/src/: bindings.rs  lib.rs
wit/: coffeeshop_counter.wit  coffeeshop_product.wit
