[package]
name = "counter-api"
authors = ["thangchung <thangchung@nomail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "2.2.0"
wit-bindgen-rt = "0.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
cloudevents-sdk = { version = "0.7" }

[package.metadata.component]
package = "coffeeshop:counter"
target = { path = "../wit/coffeeshop_counter.wit", world = "host"  }

[package.metadata.component.bindings]
derives = ["serde::Serialize", "serde::Deserialize"]
