[package]
name = "product-api"
authors = ["thangchung <thangchung@ymail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "2.2.0"
wit-bindgen = "0.22.0"
bytes = "1"
http = "0.2"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.96"

[workspace]

[package.metadata.component.target]
path = "coffeeshop.wit"
world = "hostapp"
