[package]
name = "product-api"
authors = ["thangchung <thangchung@nomail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "2.2.0"
wit-bindgen-rt = "0.22"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[package.metadata.component]
package = "example:coffeeshop"
target = { path = "../coffeeshop.wit", world = "product-host"  }

[package.metadata.component.bindings]
derives = ["serde::Serialize", "serde::Deserialize"]
